# bootloader_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootloader_template_linker_script.ld  build_project.sh  main.c  toolchain.cmake
.github/workflows/: dev-build.yml
SDK/: CMakeLists.txt
config/: sdk_config.h
docs/: Doxyfile
docs/html/: Icm20948Augmented_8h_source.html  Icm20948AuxCompassAkm_8h_source.html  Icm20948AuxTransport_8h_source.html  Icm20948DataBaseControl_8h_source.html  Icm20948DataBaseDriver_8h_source.html  Icm20948DataConverter_8h_source.html  Icm20948Defs_8h_source.html  Icm20948Dmp3Driver_8h_source.html  Icm20948LoadFirmware_8h_source.html  Icm20948MPUFifoControl_8h_source.html  Icm20948SelfTest_8h_source.html  Icm20948Serif_8h_source.html  Icm20948Setup_8h_source.html  Icm20948Transport_8h_source.html  Icm20948_8h_source.html  InvBool_8h_source.html  InvError_8h_source.html  InvExport_8h_source.html  Message_8h_source.html  SensorTypes_8h_source.html  _formulas.tex  activity_8h.html  activity_8h.js  activity_8h__dep__incl.map  activity_8h__dep__incl.md5  activity_8h__incl.map  activity_8h__incl.md5  activity_8h_source.html  activity__balance_8h.html  activity__balance_8h.js  activity__balance_8h__incl.map  activity__balance_8h__incl.md5  activity__balance_8h_source.html  activity__balloon__arms_8h.html  activity__balloon__arms_8h.js  activity__balloon__arms_8h__incl.map  activity__balloon__arms_8h__incl.md5  activity__balloon__arms_8h_source.html  activity__body__scan_8h.html  activity__body__scan_8h.js  (+1171 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.html  (+106 more)
docs/inc/doxygen-awesome-css/: README.md
scripts/: stix_pwm_array_gen.py
